fix for latest activity icons and text that wraps around them
--HG--
branch : userinterface2

--- a/app/themes/default/css/less/newui.less
+++ b/app/themes/default/css/less/newui.less
@@ -2610,9 +2610,9 @@ div.hasHalfs{
     }
     .latest-activity-toolbar,
     .filter-latest-activities-bar{
+    	padding-left:8px;
 		label{
 			cursor:pointer;
-			padding-top:0;
 			border:none;
 			background:none;
 			font-size:11px !important;
@@ -2671,12 +2671,19 @@ div.hasHalfs{
         padding-left:15px !important;
         padding-right:15px;
     }
+    .activity-item{
+    	padding-left:40px;
+    	position: relative;
+    }
     .items em{
         display:inline-block;
         height:100%;
         padding-right:15px;
         float:left;
         font-style:normal;
+        position:absolute;
+        left:0;
+        top:2px;
     }
     .Note:after{
         content: "3";
